# command-line-rust

./: LICENSE  README.md
catr/: Cargo.toml
catr/src/: lib.rs
catr/tests/: cli.rs
catr/tests/inputs/: fox.txt  spiders.txt  the-bustle.txt
echor/: Cargo.toml
echor/src/: main.rs
echor/tests/: cli.rs
hello/tests/: cli.rs
