[package]
name = "echor"
version = "0.1.0"
authors = ["mzumi <masazumi.m@gmail.com>"]
description = "A sample cli"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
